# rndr

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Setup.ps1  TODO.md  fetch-sample-data.py
apps/: CMakeLists.txt  app.cpp  boxpass.cpp  boxpass.h
apps/cubes/: CMakeLists.txt  boxpass.cpp  boxpass.h  cubes.cpp  lightpass.cpp  lightpass.h
apps/dx11/: CMakeLists.txt  tutorial.cpp
apps/frontendexample1/: CMakeLists.txt  fendexam1.cpp
apps/modelviewer/: CMakeLists.txt  modelviewer.cpp
assets/: PhongVertexShader.hlsl  SimpleFragmentShader.hlsl  SimpleVertexShader.hlsl  full-screen-quad.vert  grid.frag  grid.vert  lines.frag  lines.vert
cmake/: clang-format.cmake  clang-tidy.cmake  compiler-options.cmake  compiler-warnings.cmake  cpm.cmake  cppcheck.cmake  dependencies.cmake  optimized-debug.cmake  sanitizers.cmake
docs/: canvas.md  hardware.md  input-system.md  vulkan.md
examples/03-image/: CMakeLists.txt  image.cpp
examples/04-assimp/: CMakeLists.txt  assimp.cpp  scene.gltf
examples/05-mesh-optimizer/: CMakeLists.txt  mesh-optimizer.cpp
examples/06-vertex-pulling/: CMakeLists.txt  vertex-pulling.cpp
examples/07-cube-map/: CMakeLists.txt  cube-map.cpp
examples/10-converters/: CMakeLists.txt  converters.cpp  file-dialog.cpp
examples/11-mesh-renderer/: CMakeLists.txt  mesh-renderer.cpp
examples/12-material-system/: CMakeLists.txt  material-system.cpp
examples/12-pbr-shading/: CMakeLists.txt  pbr-shading.cpp
examples/13-material-system/: CMakeLists.txt  material-system.cpp
examples/13-scene-renderer/: CMakeLists.txt  scene-renderer.cpp
examples/scene3d/: CMakeLists.txt
examples/scene3d/assets/: cone.dae  cube.dae  cylinder.dae  scene3dfrag.hlsl  scene3dvert.hlsl  sphere.dae
examples/scene3d/src/: renderer3d.cpp  renderer3d.h  scene3d.cpp
examples/uitext/: CMakeLists.txt
examples/uitext/src/: atlaspacker.cpp  atlaspacker.h  font.cpp  font.h  main.cpp  renderer.cpp  renderer.h
src/: CMakeLists.txt  application.cpp  bitmap.cpp  file.cpp  fly-camera.cpp  frames-per-second-counter.cpp  grid-renderer.cpp  imgui-system.cpp  input-layout-builder.cpp  input-system.cpp  input.cpp  line-renderer.cpp  log.cpp  material.cpp  pixel-format.cpp  platform-application.cpp  projection-camera.cpp  projections.cpp  renderer-base.cpp  rndr.cpp  shader-permutation.cpp  shape-2d-renderer.cpp  shape-3d-renderer.cpp  time.cpp  trace.cpp  vma-implementation.cpp  volk-implementation.cpp  window.cpp
src/advanced/: advanced-buffer.cpp  advanced-descriptor-set.cpp  advanced-pipeline.cpp  advanced-pixel-format.cpp  advanced-shader.cpp  advanced-texture.cpp  command-buffer.cpp  device.cpp  graphics-context.cpp  mesh.cpp  physical-device.cpp  swap-chain.cpp  synchronization.cpp
src/camera/: firstpersoncamera.cpp
src/canvas/: bitmap-text-renderer.cpp  bitmap.cpp  brush.cpp  buffer.cpp  context.cpp  cubemap-renderer.cpp  display.cpp  draw-list.cpp  grid-renderer.cpp  mesh.cpp  pbr-renderer.cpp  projections.cpp  render-target.cpp  shader.cpp  shape-renderer.cpp  spirv-patch.cpp  spirv-patch.hpp  texture.cpp  vertex-layout.cpp
src/core/: allocator.cpp  barycentric.cpp  base.cpp  bitmap.cpp  camera.cpp  color.cpp  colors.cpp  coordinates.cpp  debug.cpp  file.cpp  fileutils.cpp  fly-camera.cpp  frames-per-second-counter.cpp  graphicstypes.cpp  init.cpp  input-layout-builder.cpp  input.cpp  line-renderer.cpp  log.cpp  memorymanager.cpp  mesh.cpp  model.cpp  objparser.cpp  pipeline.cpp  projection-camera.cpp  projectioncamera.cpp  renderer-base.cpp  rndr.cpp  rndrapp.cpp  rndrcontext.cpp  setup.cpp  shader-compiler.cpp  singletons.cpp  surface.cpp  threading.cpp  time.cpp  trace.cpp  transform.cpp  utilities.cpp  window.cpp
src/core/platform/: opengl-buffer.cpp  opengl-command-list.cpp  opengl-frame-buffer.cpp  opengl-graphics-context.cpp  opengl-helpers.cpp  opengl-helpers.h  opengl-image.cpp  opengl-pipeline.cpp  opengl-render-api.cpp  opengl-shader.cpp  opengl-swap-chain.cpp
src/dx11/: dx11buffer.cpp  dx11commandlist.cpp  dx11framebuffer.cpp  dx11graphicscontext.cpp  dx11helpers.cpp  dx11image.cpp  dx11mesh.cpp  dx11pipeline.cpp  dx11sampler.cpp  dx11shader.cpp  dx11swapchain.cpp
src/geometry/: cube.cpp
src/log/: log.cpp  log.h
src/math/: math.cpp  matrix4x4.cpp  rng.cpp  rotator.cpp
src/memory/: blockallocator.cpp  stackallocator.cpp
src/platform/: opengl-buffer.cpp  opengl-command-list.cpp  opengl-frame-buffer.cpp  opengl-graphics-context.cpp  opengl-helpers.cpp  opengl-helpers.h  opengl-helpers.hpp  opengl-pipeline.cpp  opengl-shader.cpp  opengl-swap-chain.cpp  opengl-texture.cpp  windows-application.cpp  windows-window.cpp
src/profiling/: cputracer.cpp
src/raster/: rasterframebuffer.cpp  rastergraphicscontext.cpp  rasterimage.cpp  rasterizer.cpp  rasterpipeline.cpp  rastersampler.cpp
src/raster/shaders/: phong.cpp
src/render/: image.cpp  model.cpp  pipeline.cpp  rasterimage.cpp  rasterizer.cpp  rasterpipeline.cpp  softrenderer.cpp
src/render-api/: dx11-render-api.cpp  opengl-command-list.cpp  opengl-helpers.cpp  opengl-helpers.h  opengl-render-api.cpp
src/render-api/opengl/: opengl-graphics-context.cpp
src/render/shaders/: phong.cpp
src/ui/: uifont.cpp  uiimage.cpp  uirender.cpp  uisystem.cpp
src/utilities/: bmpparser.cpp  bmpparser.h
src/utility/: assimp-helpers.cpp  cpu-tracer.cpp  cube-map.cpp  default-logger.cpp  fly-camera.cpp  flycamera.cpp  frames-per-second-counter.cpp  imgui-wrapper.cpp  imguiwrapper.cpp  input-layout-builder.cpp  line-renderer.cpp  material.cpp  mesh.cpp  modelloader.cpp  scene.cpp  time.cpp
test/: base-test.cpp  bitmap-test.cpp  camera-test.cpp  frames-per-second-counter-test.cpp  input-test.cpp  mesh-test.cpp  render-api-test.cpp  (+2 more)
tests/: CMakeLists.txt  base_test.cpp  bitmap-test.cpp  bitmap_test.cpp  camera-test.cpp  camera_test.cpp  example_test.cpp  frames-per-second-counter-test.cpp  init_test.cpp  input-test.cpp  input_test.cpp  memory_test.cpp  mesh-test.cpp  render-api-test.cpp  renderapi_test.cpp  renderer-base-test.cpp  window-test.cpp  window_test.cpp
(+389 files in other folders)
